# Grove

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml
agents/: orchestrator.py  system_prompt.py
agents/middleware/: __init__.py  system_date.py  tavily_extract_summarizer.py
agents/prompts/: __init__.py  citations.py
agents/skills/analyzing-filings/: SKILL.md
agents/skills/analyzing-financials/: SKILL.md
agents/skills/analyzing-sentiment/: SKILL.md
agents/skills/comparing-stocks/: SKILL.md
agents/skills/deep-dive-analysis/: SKILL.md
agents/subagents/filings/: agent.py  system_prompt.py
agents/subagents/market_data/: agent.py  system_prompt.py
agents/subagents/news_macro/: __init__.py  agent.py  system_prompt.py
agents/tools/: calculator.py  pageindex.py  tavily.py  yahoo_finance.py
cli/: app.py  client.py  commands.py  labels.py  styles.tcss  widgets.py
clients/: config.py  database.py  langfuse.py  llm.py  pageindex.py  storage.py  tavily.py
docs/superpowers/plans/: 2026-06-07-grove-tui-implementation.md  2026-06-08-grove-tui-v1.1-implementation.md  2026-06-09-grove-tui-v1.2-implementation.md  2026-06-09-tui-streaming-gaps.md
docs/superpowers/specs/: 2026-06-07-grove-tui-design.md  2026-06-08-grove-tui-v1.1-design.md  2026-06-09-grove-tui-v1.2-design.md  2026-06-09-tui-streaming-gaps-design.md
evals/: README.md  dataset.py  experiments.py
evals/scorers/: llm_judge.py  routing.py  structure.py  urls.py
examples/: test_filings.py  test_market_data.py  test_news_macro.py  test_orchestrator.py
models/: db.py
schemas/: agents.py
scripts/: seed_db.py
server/: app.py  schemas.py  streaming.py
tests/: README.md
tests/cli/: test_commands.py  test_labels.py
tests/db/: conftest.py  test_filings_agent.py  test_pageindex_client.py  test_seed.py
tests/scorers/: test_routing.py  test_structure.py  test_urls.py
tests/server/: test_streaming.py
