[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.23",
    "deepagents>=0.5.3",
    "edgartools>=5.30.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain-openrouter>=0.2.1",
    "langfuse>=4.3.1",
    "langgraph>=1.1.8",
    "litellm==1.83.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymupdf==1.26.4",
    "pypdf2==3.0.1",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
    "tavily-python>=0.7.23",
    "textual>=8.2.7",
    "uvicorn[standard]>=0.49.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:PyPDF2",
    "ignore:.*builtin type SwigPyPacked.*:DeprecationWarning",
    "ignore:.*builtin type SwigPyObject.*:DeprecationWarning",
    "ignore:.*builtin type swigvarlink.*:DeprecationWarning",
    "ignore:.*edgar\\.files\\.html_documents.*:DeprecationWarning:edgar",
    "ignore:.*edgar\\.files\\.html.*:DeprecationWarning:edgar",
    "ignore:.*edgar\\.files\\.htmltools.*:DeprecationWarning:edgar",
]
